<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorCadastrarJogador"
    tools:context="favarin.com.br.pernetas2.activity.ActivityCadastrarJogador">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtNomeJogador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtNomeJogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_jogador"
                android:singleLine="true"
                android:textColor="@color/texto" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioPosicoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioLinha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginRight="5dp"
                android:text="@string/linha"
                android:textColor="@color/texto"
                android:textSize="@dimen/texto" />

            <RadioButton
                android:id="@+id/radioGoleiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:text="@string/goleiro"
                android:textColor="@color/texto"
                android:textSize="@dimen/texto" />
        </RadioGroup>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/imgImagemPerfil"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile1"
                    app:civ_border_color="#FFFF"
                    app:civ_border_width="2dp"
                    app:civ_shadow="true"
                    app:civ_shadow_radius="10"
                    app:civ_shadow_color="#000"/>
            <TextView
                android:id="@+id/btnExcluirFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="X"
                android:layout_gravity="left|top"
                android:textColor="@color/vermelho"/>
            <ImageView
                android:id="@+id/btnAdicionarFoto"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/mais"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:layout_gravity="bottom|right"/>
        </FrameLayout>

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnSalvar"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
