<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_weight="1"
    android:orientation="vertical">

    <!-- 1º LINHA -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.34"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.28"
                android:background="@color/azul_brasao"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/gerenciar"
                android:textColor="@color/branco"
                android:textSize="@dimen/card_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/financas_jogo"
                android:textColor="@color/texto"
                android:textSize="@dimen/card_subtext" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_weight="0.22">
            <Spinner
                android:drawSelectorOnTop="true"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:background="#FFF"
                android:textColor="@color/branco"
                android:textSize="@dimen/card_text"
                android:id="@+id/spnSelecionarJogo"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:gravity="center_horizontal|center_vertical"
                android:text="+"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/branco"
                android:textSize="@dimen/card_item_text"
                android:elevation="5dp"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.33"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.19"
                android:background="@color/azul_brasao"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/mes_corrente"
                android:textColor="@color/branco"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/txtNomeArtilheiro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:gravity="center_horizontal|center_vertical"
                android:text="JOÃO PÉ DE FERRO"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/card_item_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtGolsArtilheiro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center_horizontal|top"
                android:text="@string/gols_marcados"
                android:textColor="@color/texto"
                android:textSize="@dimen/card_subtext" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- 2ª LINHA -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.33"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:background="@color/azul_brasao"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/a_receber"
                    android:textColor="@color/branco"
                    android:textSize="@dimen/card_text" />

                <TextView
                    android:id="@+id/txtDataProximoJogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="R$0,00"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/card_item_text"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            app:cardCornerRadius="5dp"
            app:cardPreventCornerOverlap="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.20"
                    android:background="@color/azul_brasao"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/recebido"
                    android:textColor="@color/branco"
                    android:textSize="@dimen/card_text" />

                <TextView
                    android:id="@+id/txtGolsMarcados"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="R$150,00"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/card_item_text"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <!-- 3ª LINHA -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.33"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:background="@color/azul_brasao"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/acumulado"
                android:textColor="@color/branco"
                android:textSize="@dimen/card_text" />

            <TextView
                android:id="@+id/txtNomeMelhorGoleiro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:gravity="center_horizontal|center_vertical"
                android:text="R$340,00"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/card_item_text"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- 4ª LINHA -->
</LinearLayout>